<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAuthentication.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:src="@drawable/login_image"/>
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_image"
                android:hint="@string/user_email"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/ic_email"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_email"
                android:hint="@string/user_pass"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/ic_password"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"/>

            <TextView
                android:id="@+id/forgot_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_password"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="textStart"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password_link"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons" />

            <TextView
                android:id="@+id/no_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_new_account"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_button"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_using"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/no_account"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_phone_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_phone"
                android:text="Phone"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                android:drawableStart="@drawable/ic_phone"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="19dp"
                android:layout_marginLeft="19dp"
                android:textAllCaps="false"
                android:background="@drawable/buttons" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>