<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nephapp.UserAuthentication.MobilePhoneLoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_phone_number"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="180dp"
        android:hint="@string/mobile_phone_example"
        android:drawableStart="@drawable/ic_phone"
        android:background="@drawable/inputs"
        android:padding="8dp"
        android:inputType="phone"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textStyle="bold|italic" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_verification_code"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_password"
        android:background="@drawable/inputs"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:layout_below="@+id/input_phone_number"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/btn_send_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_verification_code"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:layout_marginRight="19dp"
        android:layout_marginLeft="19dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:text="@string/send_verification_code"
        android:background="@drawable/buttons"
        android:textColor="@android:color/background_light"/>

    <Button
        android:id="@+id/btn_verify_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_send_verification_code"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:layout_marginRight="19dp"
        android:layout_marginLeft="19dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:text="@string/verify_phone_number"
        android:background="@drawable/buttons"
        android:textColor="@android:color/background_light"
        android:visibility="invisible"/>


</RelativeLayout>
